11-04-cfn-helperscripts-v1-Users.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Helperscript Intrpduction


Parameters:
  MyKeyName:
    Description: Parametrizing the key name 
    Type: AWS::EC2::KeyPair::KeyName
   
  MyEC2Type:
    Description: Parametrizing the  Instance type from SSM
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.small
      - t2.micro
      - t2.medium
  MyAZ:
    Description: Parametrizing the  Availabilty Zone
    Type: String
    Default: us-west-2a
    AllowedValues:
      - us-west-2a
      - us-west-2b
      - us-west-2c






Resources:
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SSH Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: "8080"
          ToPort: "8080"
          CidrIp: 0.0.0.0/0



  MoazzamEC2Instance:
    Type: AWS::EC2::Instance
    Metadata: 
      Comment: Deploy simple tomcat sevice using cfn
      AWS::CloudFormation::Init: 
        config: 
          packages: 
            yum:
              java-1.8.0-openjdk.x86-64: []
              java-1.8.0-openjdk-devel: []
              tomacat8: []
          groups: 
            groupone: {}
            moazzamtestgroup: 
              gid: "501"
          users:
            moazzamtestone:
              groups:
                - moazzamtestgroup
              uid: "502"
              homeDir: "/home"
          sources: 

          files: 

          commands: 

          services: 

    Properties:
      ImageId: ami-0cf6f5c8a62fa5da6
      InstanceType: !Ref MyEC2Type
      KeyName: !Ref MyKeyName
      SecurityGroups:
        - !Ref SSHSecurityGroup
      AvailabilityZone: !Ref MyAZ
